tools/testdata/p4_16_errors/issue67.p4
const bool x = 20; // error
